# tas-input-v2

./: .gitignore  CMakeLists.txt  README.md
cmake/: M64PApi.cmake  PkgConfigTargets.cmake  PlatformChecks.cmake  Resources.cmake
css/: button-frame.css
res/css/: button-frame.css  main.css
res/ui/: button-frame.ui  main.ui
scripts/: rsrcc.py
src/: ButtonFrame.cpp  ButtonFrame.hpp  JoystickFrame.hpp  joystick.cpp  joystick.hpp  main.cpp  main_window.cpp  main_window.hpp  mupen_api.hpp  osal_dl.cpp  osal_dl.hpp  plugin.cpp  plugin.h  plugin.hpp
